--- a/UserApp/templates/master.html
+++ b/UserApp/templates/master.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Firstbit Cakes</title>
+  <title>Kesula Cakes</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
@@ -32,7 +32,7 @@
 
 <div class="jumbotron">
   <div class="container text-center">
-    <h1>Firstbit Cakes</h1>      
+    <h1>Kesula Cakes</h1>      
     <p>Fresh,Delicious and Tasty..</p>
   </div>
 </div>
@@ -48,7 +48,7 @@
       {%if "uname" in request.session%}
       <a class="navbar-brand" href="#">Welcome {{request.session.uname}}</a>
       {%else%}
-      <a class="navbar-brand" href="#">Firstbit Cakes</a>
+      <a class="navbar-brand" href="#">Kesula Cakes</a>
       {%endif%}      
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
